[project]
name = "disaster-response-env"
version = "0.1.0"
description = "AI disaster response environment for flood scenarios"
authors = [
    {name = "Thrishank"}
]

dependencies = [
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "env:DisasterEnv"