[project]
name = "disaster-response-env"
version = "2.0.0"
description = "OpenEnv flood disaster response environment — AI agent allocates resources under dynamic conditions"
authors = [
    {name = "Thrishank"}
]

dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.22",
    "openenv-core>=0.2.0"
]

[tool.openenv]
entrypoint = "env:DisasterEnv"